# github-analysis

./: .aidigestignore  .flake8  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
migrations/: env.py
migrations/versions/: 0868bec25e16_.py  4566cc71a6b3_initial_schema.py  881dcbcb3bd5_.py  c05b21796725_.py
src/github_analysis/: config.py  dependencies.py  main.py
src/github_analysis/db/: config.py
src/github_analysis/models/: models.py
src/github_analysis/models/schemas/: pull_requests.py
src/github_analysis/services/: ai_service.py  analysis_service.py  embedding.py  github.py  github_service.py
test_data/: compare_embeddings.py  config.py  process_test_prs.py
test_data/prs/: pr1_error_handling.json  pr2_error_handling.json  pr3_feature_add.json  test_pr_error_handling.json  test_pr_performance.json  test_pr_retry_logic.json
tests/: test_embedding_comparison.py  test_main.py
