[tool.poetry]
name = "github-analysis"
version = "0.1.0"
description = "GitHub PR Analysis Tool"
authors = ["Kelvin Davis <archidit7@gmail.com>"]
packages = [
    { include = "github_analysis", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
httpx = "^0.26.0"
sqlalchemy = "^2.0.38"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"