[tool.poetry]
name = "github-analysis"
version = "0.1.0"
description = "GitHub PR Analysis Tool"
authors = ["Kelvin Davis <archidit7@gmail.com>"]
packages = [
    { include = "github_analysis", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
httpx = "^0.26.0"
sqlalchemy = {extras = ["asyncpg"], version = "^2.0.38"}
aiohttp = "^3.11.12"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.7.1"
asyncpg = "^0.30.0"
alembic = "^1.14.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"